[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netcheck"
version = "1.0.0"
description = "Network interface analysis tool for GNU/Linux"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Netcheck Contributors"}]
# Pinning the major version for stability
dependencies = ["requests>=2.31.0,<3.0.0"]

[tool.mypy]
python_version = "3.12"
strict = true
# Additional strictness beyond 'strict = true'
disallow_any_generics = true
disallow_subclassing_any = true
warn_unreachable = true
pretty = true
show_error_codes = true
# Explicitly list all files and directories to check
files = [
    "netcheck.py",
    "orchestrator.py",
    "display.py",
    "export.py",
    "models.py",
    "enums.py",
    "config.py",
    "colors.py",
    "logging_config.py",
    "utils/",
    "network/",
    "tests/"
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true # Automatically fix what can be fixed

[tool.ruff.lint]
# Expanded Rule Selection:
# E/W: Error/Warning, F: Pyflakes, I: Isort (sorting imports)
# N: Naming, UP: Upgrade (Python 3.12 syntax), S: Security
# B: Bugbear (common bugs), A: Builtins, D: Docstrings
# ARG: Unused arguments, RET: Return statement logic
# PT: Pytest, PL: Pylint-equivalent rules
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "D", "W", "ARG", "RET", "PT", "PL"]
ignore = ["D100", "D104"] # Ignore missing docstrings in __init__ and modules

[tool.ruff.lint.pydocstyle]
convention = "google" # Enforces Google-style docstrings

[tool.pylint.main]
jobs = 0 # Use all available CPU cores
py-version = "3.12"
fail-under = 10.0 # Demand perfection
# NOTE: Pylint cannot specify default files in pyproject.toml
# Root is NOT a package, so 'pylint .' will fail
# Solution: Use 'make pylint' (recommended) or explicit file listing

[tool.pylint.design]
max-attributes = 10 # Tightened from 16
max-args = 5       # Tightened from 6
max-returns = 6    # Standard limit we discussed

[tool.pylint.logging]
logging-format-style = "old" # Use % style for logging

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    # Don't fail on coverage - tests should verify quality, not chase metrics
    # "--cov-fail-under=87",  # Commented out - focus on quality, not numbers
]

# Test markers for selective execution
markers = [
    "integration: Integration tests requiring real Linux system with actual hardware/commands",
    "slow: Tests that take longer than 1 second (use -m 'not slow' to skip)",
    "network: Tests requiring active network connection",
    "api: Tests that hit external APIs (ipinfo.io) - may be rate limited",
    "security: Security-focused tests (injection attacks, validation)",
    "regression: Tests for specific bugs that were found and fixed",
]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
skip_covered = false
show_missing = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
